# NightLoom

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NEXT_PHASES_PLAN.md  README.md  pnpm-lock.yaml  pyproject.toml
backend/: .gitignore  README_LLM_HEALTH_CHECK.md  RESTART_SERVER_INSTRUCTIONS.md  capture_server_logs.py  check_current_status.py  final_100_percent_test.txt  final_test_check.txt  final_test_results.txt  pyproject.toml  simple_axis_test.py  specific_test_results.txt  test_axis_fix_integration.py  test_direct_keyword_generation.py  test_fixed_keywords.py  test_keyword_generation.py  test_llm_health_check.py  test_logging.py  test_logging_configuration.py  test_multiple_characters.py  test_new_keyword_format.py  test_openai_config.py  test_other_characters.py  test_results.txt  test_results_final.txt  test_results_updated.txt  test_simple_logging.py  test_with_log_file.py  validate_fallback_keywords.py  wait_for_server_and_test.py
backend/app/: main.py
backend/app/api/: bootstrap.py  choices.py  keyword.py  results.py  scenes.py
backend/app/clients/: anthropic_client.py  base.py  llm.py  llm_client.py  mock_client.py  openai_client.py
backend/app/middleware/: llm_monitoring.py  security.py
backend/app/models/: llm_config.py  session.py
backend/app/services/: external_llm.py  fallback_assets.py  fallback_manager.py  llm_metrics.py  observability.py  prompt_template.py  scoring.py  session.py  session_store.py  typing.py
backend/scripts/: README.md
backend/templates/prompts/: axis_creation.jinja2  keyword_generation.jinja2  (+2 more)
backend/tests/: conftest.py
(+227 files in other folders)
